--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "firebase": "^4.8.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-keydown": "^1.9.6",
     "react-scripts": "1.0.17"
   },
   "scripts": {
