--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "name": "reactfirebase",
   "version": "0.1.0",
   "private": true,
+  "main": "index.js",
+  "license": "ISC",
   "dependencies": {
     "bootstrap": "^4.0.0",
-    "firebase": "^4.8.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-keydown": "^1.9.6",
-    "react-scripts": "1.0.17"
+    "react-scripts": "1.0.17",
+    "firebase": "4.8.0"
   },
   "scripts": {
     "start": "webpack-dev-server --inline --hot --open",
