--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^4.0.0",
+    "firebase": "4.8.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-keydown": "^1.9.6",
+    "react-router": "^3.2.0",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
-    "firebase": "4.8.0"
+    "react-spinners": "^0.2.6"
   },
   "scripts": {
     "start": "webpack-dev-server --inline --hot --open",
@@ -20,6 +23,7 @@
   "devDependencies": {
     "@types/react": "^16.0.37",
     "@types/react-dom": "^16.0.4",
+    "@types/react-router": "^3.0.15",
     "awesome-typescript-loader": "^3.4.1",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
