--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "typescript": "^2.7.1",
     "url-loader": "^0.6.2",
     "webpack": "^3.11.0",
+    "webpack-cli": "^3.1.0",
+    "webpack-command": "^0.4.1",
     "webpack-dev-server": "^2.11.1"
   }
 }
