--- a/package.json
+++ b/package.json
@@ -5,15 +5,13 @@
   "main": "index.js",
   "license": "ISC",
   "dependencies": {
-    "bootstrap": "^4.0.0",
-    "firebase": "4.8.0",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
+    "bootstrap": "^4.1.3",
+    "react": "^16.5.0",
+    "react-dom": "^16.5.0",
     "react-keydown": "^1.9.6",
     "react-router": "^3.2.0",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.0.17",
-    "react-spinners": "^0.2.6"
+    "react-scripts": "1.0.17"
   },
   "scripts": {
     "start": "webpack-dev-server --inline --hot --open",
@@ -21,23 +19,27 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "@types/react": "^16.0.37",
-    "@types/react-dom": "^16.0.4",
+    "@types/prop-types": "^15.5.5",
+    "@types/react": "^16.4.13",
+    "@types/react-dom": "^16.0.7",
     "@types/react-router": "^3.0.15",
-    "awesome-typescript-loader": "^3.4.1",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-preset-env": "^1.6.1",
+    "awesome-typescript-loader": "^3.5.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
-    "css-loader": "^0.28.9",
+    "css-loader": "^0.28.11",
     "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^1.1.6",
+    "file-loader": "^1.1.11",
+    "firebase": "^4.13.1",
     "html-webpack-plugin": "^2.30.1",
     "react-modal": "^3.1.13",
-    "style-loader": "^0.20.1",
-    "typescript": "^2.7.1",
+    "react-spinners": "^0.4.5",
+    "style-loader": "^0.20.3",
+    "typescript": "^2.9.2",
     "url-loader": "^0.6.2",
-    "webpack": "^3.11.0",
-    "webpack-dev-server": "^2.11.1"
+    "webpack": "^3.12.0",
+    "webpack-command": "^0.4.1",
+    "webpack-dev-server": "^2.11.3"
   }
 }
